--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -14,7 +14,7 @@ Version: 1.0.0
   --theme: #cb222e;
   --theme-2: #8760fd;
   --theme-3: #2b2b6b;
-  --theme-4: #ece6ff;
+  --theme-4: #f9fafb;
   --header: #000000;
   --base: #cb222e;
   --text: #696969;
@@ -2168,6 +2168,18 @@ input.main-search-input::placeholder {
   border-radius: 50%;
   color: var(--white);
 }
+.w-100px {
+  width: 50px;
+}
+.contact-list .icon {
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  background-color: var(--theme);
+  border-radius: 50%;
+  color: var(--white);
+}
 .sticky.header-1 .header-right .icon-items .content p {
   color: var(--text);
 }
@@ -2407,7 +2419,7 @@ input.main-search-input::placeholder {
 }
 .breadcrumb-wrapper .page-heading .breadcrumb-items li {
   font-size: 24px;
-  color: var(--theme);
+  color: var(--body);
   font-weight: 400;
   text-transform: capitalize;
   letter-spacing: -0.72px;
@@ -2424,7 +2436,7 @@ input.main-search-input::placeholder {
   }
 }
 .breadcrumb-wrapper .page-heading .breadcrumb-items li a {
-  color: var(--text);
+  color: var(--body);
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -2432,7 +2444,7 @@ input.main-search-input::placeholder {
   color: var(--theme);
 }
 .breadcrumb-wrapper .page-heading .breadcrumb-items li i {
-  color: var(--theme);
+  color: var(--body);
 }
 @media (max-width: 575px) {
   .breadcrumb-wrapper .page-heading .breadcrumb-items li i {
@@ -4214,7 +4226,7 @@ input.main-search-input::placeholder {
   border-radius: 16px;
   padding: 25px 30px;
   overflow: hidden;
-  background: #efebff;
+  background: #f8f9fa;
   margin-top: 30px;
 }
 @media (max-width: 991px) {
@@ -4236,8 +4248,8 @@ input.main-search-input::placeholder {
   color: var(--theme);
   font-size: 22px;
   font-weight: 600;
-  border: 1.2px solid rgba(94, 50, 255, 0.2705882353);
-  background: #e0d7ff;
+  border: 1.2px solid var(--base);
+  background: #fff;
 }
 @media (max-width: 991px) {
   .work-process-wrapper .work-process-content .work-process-items .digit-box {
@@ -5327,7 +5339,7 @@ input.main-search-input::placeholder {
 }
 
 .planning-wrapper .planning-content .planning-items {
-  background-color: rgba(92, 48, 253, 0.1);
+  /* background-color: rgba(92, 48, 253, 0.1); */
   border: 1.2px solid rgba(16, 24, 40, 0.1);
   border-radius: 10px;
   padding: 22px 30px;
@@ -5385,15 +5397,24 @@ input.main-search-input::placeholder {
 }
 .planning-wrapper .planning-content .planning-items:hover {
   background-color: var(--white);
-  -webkit-box-shadow: 0px 10px 60px rgba(92, 48, 253, 0.2);
-  box-shadow: 0px 10px 60px rgba(92, 48, 253, 0.2);
+  -webkit-box-shadow: 0px 10px 60px rgb(203 34 46 / 20%);
+  box-shadow: 0px 10px 60px rgb(203 34 46 / 20%);
   border: 1.2 solid transparent;
 }
 .planning-wrapper .planning-content .planning-items:hover .number {
   background-color: var(--theme);
   color: var(--white);
-  -webkit-box-shadow: 0px 5px 30px rgba(92, 48, 253, 0.5);
-  box-shadow: 0px 5px 30px rgba(92, 48, 253, 0.5);
+  -webkit-box-shadow: 0px 10px 60px rgb(203 34 46 / 20%);
+  box-shadow: 0px 10px 60px rgb(203 34 46 / 20%);
+}
+.breadcrumb-wrapper::after {
+  background-color: hsl(210deg 10.34% 22.75% / 70%);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  display: block;
+  content: "";
 }
 .planning-wrapper .planning-content .planning-items.active {
   background-color: var(--white);
@@ -5809,7 +5830,7 @@ input.main-search-input::placeholder {
 .service-card-items {
   margin-top: 30px;
   padding: 40px 45px;
-  background: rgba(92, 48, 253, 0.07);
+  /* background: rgba(92, 48, 253, 0.07); */
   border: 1.2px solid rgba(16, 24, 40, 0.1);
   border-radius: 16px;
   -webkit-transition: all 0.4s ease-in-out;
@@ -5853,6 +5874,10 @@ input.main-search-input::placeholder {
 }
 .service-card-items:hover {
   background-color: var(--theme);
+}
+.service-card-items:hover p,
+.service-card-items:hover h3 {
+  color: var(--body);
 }
 .service-card-items:hover .icon {
   color: var(--white);
@@ -5944,7 +5969,8 @@ input.main-search-input::placeholder {
 }
 
 .service-offer-section {
-  padding: 247px 0 120px;
+  padding: 120px 0 120px;
+  background-color: var(--theme-4);
 }
 @media (max-width: 1899px) {
   .service-offer-section {
@@ -5978,8 +6004,8 @@ input.main-search-input::placeholder {
   border-radius: 10px;
   border: 1.2px solid rgba(16, 24, 40, 0.1);
   background: rgba(255, 255, 255, 0.1);
-  -webkit-box-shadow: 0px 10px 60px 0px rgba(92, 48, 253, 0.1);
-  box-shadow: 0px 10px 60px 0px rgba(92, 48, 253, 0.1);
+  -webkit-box-shadow: 0px 10px 60px rgb(203 34 46 / 10%);
+  box-shadow: 0px 10px 60px rgb(203 34 46 / 10%);
   padding: 30px 40px;
 }
 @media (max-width: 767px) {
@@ -6110,7 +6136,9 @@ input.main-search-input::placeholder {
 .service-box-items:hover .icon {
   color: var(--white);
 }
-
+.service-section {
+  background-color: var(--theme-4);
+}
 @media (max-width: 991px) {
   .service-section-4 .section-title br {
     display: none;
