--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,12 +11,12 @@ Version: 1.0.0
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #cb222e;
+  --theme: #fb1515;
   --theme-2: #8760fd;
   --theme-3: #2b2b6b;
   --theme-4: #f9fafb;
   --header: #000000;
-  --base: #cb222e;
+  --base: #fb1515;
   --text: #696969;
   --border: #e6e6e6;
   --border2: #373737;
@@ -1958,7 +1958,7 @@ input.main-search-input::placeholder {
   gap: 50px;
 }
 .logoShap {
-  width: 35%;
+  width: 100%;
 }
 .bg-team {
   background: #f9fafb;
@@ -2115,6 +2115,9 @@ input.main-search-input::placeholder {
 .header-6 {
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+.sticky-logo {
+  width: 20%;
 }
 .header-6 .header-main .sticky-logo .logo-2 {
   display: none;
@@ -6853,7 +6856,13 @@ input.main-search-input::placeholder {
   border-bottom: 2px solid transparent;
   border-image-slice: 30;
 }
-
+.width90 {
+  width: 90%;
+}
+.phoneI i {
+  color: var(--base);
+  margin-right: 10px;
+}
 .team-items .team-image img {
   width: 100%;
   height: 100%;
@@ -7357,7 +7366,8 @@ input.main-search-input::placeholder {
   margin-bottom: 5px;
 }
 .contact-form-items .form-clt input,
-.contact-form-items .form-clt textarea {
+.contact-form-items .form-clt textarea,
+.contact-form-items .form-clt select {
   padding: 18px 30px;
   border: none;
   outline: none;
@@ -11034,7 +11044,7 @@ p.sticky-label {
   gap: 10px;
   margin-top: 30px;
 }
-.footer-widgets-wrapper .single-footer-widget .footer-content .social-icon a {
+.footer-widgets-wrapper .single-footer-widget .footer-content .social-icon a,  .Footersocial-icon a{
   width: 40px;
   height: 40px;
   text-align: center;
@@ -11050,7 +11060,7 @@ p.sticky-label {
   .single-footer-widget
   .footer-content
   .social-icon
-  a:hover {
+  a:hover, .Footersocial-icon a:hover {
   background-color: var(--theme);
   color: var(--white);
 }
