--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,12 +11,12 @@ Version: 1.0.0
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #fb1515;
+  --theme: #cf2031;
   --theme-2: #8760fd;
   --theme-3: #2b2b6b;
   --theme-4: #f9fafb;
   --header: #000000;
-  --base: #fb1515;
+  --base: #cf2031;
   --text: #696969;
   --border: #e6e6e6;
   --border2: #373737;
@@ -2117,7 +2117,7 @@ input.main-search-input::placeholder {
   box-shadow: none;
 }
 .sticky-logo {
-  width: 20%;
+  width: 15%;
 }
 .header-6 .header-main .sticky-logo .logo-2 {
   display: none;
